Downgrade java 11 to java 8